# ATLAS

./: .gitignore  LICENSE  README.md  manual_validation.html  parse_marker_full_pagewise.py  prompt_check.md  pyproject.toml  support_tracer_backend.py  support_tracer_cli.py
atlas/: __init__.py  config.py  llm_item_classifier.py  manual_validation.py  paper_dataset.py  parse_marker_full_pagewise.py  support_tracer_backend.py  support_tracer_cli.py
tests/: test_support_tracer_retrieval.py
